--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
+    compile 'com.android.support:cardview-v7:25.0.0'
 }
