--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity android:name=".TestActivity"></activity>
         <activity android:name=".TimerActivity"></activity>
         <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".HelpActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
