--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".AboutActivity"></activity>
         <activity android:name=".HelpActivity"></activity>
         <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".ShowTxtAssetActivity"></activity>
     </application>
 
 </manifest>
