--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.root.myapplication">
-
     <application
+
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestActivity"></activity>
-        <activity android:name=".TimerActivity"></activity>
+        <activity android:name=".TimerActivity" android:launchMode="singleTask"></activity>
         <activity android:name=".DetailActivity"></activity>
         <activity android:name=".AboutActivity"></activity>
         <activity android:name=".HelpActivity"></activity>
