--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
     compile 'com.android.support:cardview-v7:25.0.0'
+    dependencies {
+        // Required -- JUnit 4 framework
+        testCompile 'junit:junit:4.12'
+        // Optional -- Mockito framework
+        testCompile 'org.mockito:mockito-core:1.10.19'
+    }
+
+
 }
